2025-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Removed dvt_import(1).
	* Removed the 'davit-importers' RPM package.
2025-07-24 Fred Gleason <fredg@paravelsystems.com>
	* Removed the vmime dependency.
2025-07-25 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up build warnings.
2025-07-29 Fred Gleason <fredg@paravelsystems.com>
	* Hid the 'Generate Affidavit' button in the 'List Programs' dialog.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'Spread' class heirarchy out of the convenience library
	into 'davit/'.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'StateComboBox' widget out of the convenience library
	into 'davit/'.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'AlgoComboBox' widget out of the convenience library
	into 'davit/'.
2025-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'ChangePassword' dialog out of the convenience library
	into 'davit/'.
2025-07-31 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'DvtDateDialog' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'DvtDatePicker' widget out of the convenience library
	into 'davit/'.
	* Moved the 'DvtDialog' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'DvtFontEngine' class out of the convenience library
	into 'davit/'.
	* Moved the 'DvtLabel' widget out of the convenience library
	into 'davit/'.
	* Moved the 'DvtListSelector' widget out of the convenience library
	into 'davit/'.
	* Moved the 'Login' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'state_conv' module out of the convenience library
	into 'davit/'.
	* Moved the 'DvtTableView' widget out of the convenience library
	into 'davit/'.
	* Moved the 'DvtTextFile' dialog out of the convenience library
	into 'davit/'.
	* Moved the 'DvtTransportButton' widget out of the convenience
	library	into 'davit/'.
	* Moved the 'DvtWidget' widget out of the convenience library
	into 'davit/'.