@@ -19,19 +19,18 @@
 ##
 ## Use automake to process this into a Makefile.in
 
-AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -std=c++17 -fPIC -I$(top_srcdir)/lib @QT6_CFLAGS@
+AM_CPPFLAGS = -Wall -DPREFIX=\"$(prefix)\" -std=c++17 -fPIC -I$(top_srcdir)/lib @QT6CLI_CFLAGS@
 LIBS = -L$(top_srcdir)/lib
-MOC = @QT6_MOC@
 
 # QT's Meta Object Compiler (moc)
 moc_%.cpp:	%.h
-	$(MOC) $< -o $@
+	@QT6CLI_MOC@ $< -o $@
 
 sbin_PROGRAMS = dvtstamp
 
 dist_dvtstamp_SOURCES = dvtstamp.cpp dvtstamp.h
 nodist_dvtstamp_SOURCES = moc_dvtstamp.cpp
-dvtstamp_LDADD = -ldvt @QT6_LIBS@
+dvtstamp_LDADD = -ldvt @QT6CLI_LIBS@
 
 EXTRA_DIST = dvtstamp.pro
 
